{{$NEXT}}

0.8.8  2024-10-16T07:26:50+13:00
   - Fix handling of CID-keyed CFF fonts

0.8.7  2024-08-09T05:32:42+12:00
   - Removed shaping support to PDF::Font::Loader::HarfBuzz. This module
     must be loaded to enable full shaping.

0.8.6  2024-08-03T09:13:48+12:00
   - Added more shaping tests.
   - Fixed output of zero width glyphs in CID fonts (for Arabic
     shaping test)

0.8.5  2024-07-29T07:21:53+12:00
   - Fix ToUnicode CMAP generation for ligature entries.

0.8.4  2024-07-28T10:30:37+12:00
   - Bug fixes to shaping. Make correct use of x/y advance and offset in
     shaping metrics.

0.8.3  2024-04-11T06:22:45+12:00
    - Fix potential embedding of *.ttc (True Type collection) fonts. They
      are not directly recognised as valid PDF font program and need to be
      processed by HarfBuzz::Subset.

0.8.2  2024-02-27T08:40:06+13:00
    - Add shape(:!kern) option. I.e shaping with horizontal kerning disabled.

0.8.1  2024-01-23T07:43:00+13:00
    - Set shaping direction from left-to-right

0.8.0  2024-01-22T06:22:19+13:00
   - Add auto-loading of type-1 AFM metrics. Look for a
     sibling *.afm file when loading type-1 *.pfa or *.pfb
     files and attach it.
   - Add shape() method:
     -- integrate HarfBuzz for TrueType and OpenType shaping
     -- fallback to kerning + typographic ligature substitution
        for other fonts
     -- Add allocate-cid() and encode-cids() method to encoders.
        To support HarfBuzz shaping, which may return non-unicode mapped
        glyphs.

0.7.8  2023-11-13T06:38:11+13:00
   - Further streamline CMAP encoding. Remove redundant code-point checks.
   - Minor ligature and glyph lookup fixes

0.7.7  2023-10-15T07:18:39+13:00
   - Fix CMap encoder to handle string decoding of non
     Unicode-standard ligatures #35
   - Improved compaction of ToUnicode CMaps 

0.7.6  2023-09-29T17:14:01+13:00
   - Fix a bug in parsing ToUnicode CMAPs #34

0.7.5  2023-09-01T08:55:54+12:00
   - Attempted zef upload
